Today's Delivery Tab is completed (Backend Part)

--- a/res/menu/bottom_nav_menu.xml
+++ b/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/menu_history"
         android:title="History" />
     <item
-        android:id="@+id/bottom_nav_other"
+        android:id="@+id/bottom_nav_update_status"
         android:icon="@drawable/menu_setting"
-        android:title="Other" />
+        android:title="Update Status" />
 </menu>
