--- a/res/layout/activity_partner_dashboard.xml
+++ b/res/layout/activity_partner_dashboard.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PartnerDashboard">
+
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -28,19 +29,16 @@
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomnavigationview"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="12dp"
                 android:background="@android:color/transparent"
                 app:itemIconTint="@color/bottom_icon_background"
                 app:itemTextColor="@color/bottom_icon_background"
                 app:labelVisibilityMode="labeled"
-                app:menu="@menu/bottom_nav_menu" />
-
+                app:menu="@menu/bottom_nav_menu"
+                />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 </LinearLayout>
