--- a/res/layout/fragment_today_delivery.xml
+++ b/res/layout/fragment_today_delivery.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     tools:context=".TodayDelivery">
 
     <TextView
@@ -21,7 +22,12 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
+        android:dividerHeight="20dp"
+        android:divider="@color/white"
+        android:backgroundTint="@color/transparent"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
         />
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/notFoundAnimation"
