--- a/res/layout/fragment_update_status.xml
+++ b/res/layout/fragment_update_status.xml
@@ -5,5 +5,97 @@
     android:layout_height="match_parent"
     tools:context=".UpdateStatus">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Update Delivery Status"
+        android:textColor="@color/secondaryappcolor"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="38dp"
+        android:text="Delivery Status"
+        android:layout_marginTop="120dp"
+        android:textSize="24sp"
+        android:textColor="@color/purple_700"
+        android:textStyle="bold"
+        android:textAlignment="textStart"
+        android:layout_marginLeft="60dp"
+        />
+    <RadioGroup
+        android:id="@+id/DeliveryStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:textAlignment="center"
+        android:layout_marginTop="170dp">
 
+        <RadioButton
+            android:id="@+id/statusOutForPickup"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Out for pickup"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusInTransit"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="In Transit"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusOutForDelivery"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Out for delivery"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusDelivered"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Delivered"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusCompleted"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Completed"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusUnreachable"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Unreachable"
+            android:textSize="20sp" />
+
+        <RadioButton
+            android:id="@+id/statusInvalidAddress"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Invalid Address"
+            android:textSize="22sp" />
+
+        <RadioButton
+            android:id="@+id/statusDeniedToAccept"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Denied to accept"
+            android:textSize="22sp" />
+    </RadioGroup>
 </FrameLayout>
